Checkpoint (snippet for streaming films)